[gd_scene load_steps=21 format=3 uid="uid://svtbgcgxpj0a"]

[ext_resource type="Script" path="res://components/actors/enemies/Guardian.gd" id="1_yw4mg"]
[ext_resource type="Script" path="res://components/classes/ActorStat.gd" id="2_74tix"]
[ext_resource type="Script" path="res://components/classes/HealthStat.gd" id="2_mnldp"]
[ext_resource type="Texture2D" uid="uid://b7r2js7er53jx" path="res://assets/art/enemies/guardian_standing_left.png" id="3_xy6ev"]
[ext_resource type="PackedScene" uid="uid://dcnv7c42q4elk" path="res://components/ui/health_bar/health_bar.tscn" id="4_5trjv"]
[ext_resource type="Texture2D" uid="uid://c0m0m4k5j8xqc" path="res://assets/art/enemies/guardian_moving_left.png" id="4_sjfuy"]
[ext_resource type="Texture2D" uid="uid://bnix24ffw6e04" path="res://assets/art/enemies/guardian_standing_right.png" id="5_ciq83"]
[ext_resource type="Texture2D" uid="uid://d4hc6bxdrmj5j" path="res://assets/art/enemies/guardian_moving_right.png" id="6_jg5q7"]
[ext_resource type="AudioStream" uid="uid://ce2dcppxrvjec" path="res://assets/sound/walk.wav" id="9_qqe4e"]
[ext_resource type="AudioStream" uid="uid://de0wud0xraddl" path="res://assets/sound/sword_hit.wav" id="10_xdijb"]
[ext_resource type="AudioStream" uid="uid://cjwyuvt5l6tlw" path="res://assets/sound/actor2_hurt1.wav" id="11_2n4xc"]

[sub_resource type="Resource" id="Resource_n28sc"]
script = ExtResource("2_mnldp")
health_points = 500
invincible = false

[sub_resource type="Resource" id="Resource_5yajh"]
script = ExtResource("2_74tix")
movement_speed = 300.0
jump_velocity = 0.0
attack_speed = 0.0
attack_range = 0.0
attack_damage = 50
attack_knock_back_vector = Vector2(1500, 0)
attack_self_knock_back_strength = 20.0
defense_damage_resistance = 0

[sub_resource type="CircleShape2D" id="CircleShape2D_t31eb"]
radius = 600.0

[sub_resource type="SpriteFrames" id="SpriteFrames_71ns4"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_xy6ev")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_xy6ev")
}, {
"duration": 1.0,
"texture": ExtResource("4_sjfuy")
}],
"loop": true,
"name": &"move_left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("5_ciq83")
}, {
"duration": 1.0,
"texture": ExtResource("6_jg5q7")
}],
"loop": true,
"name": &"move_right",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_e68us"]
radius = 25.0
height = 74.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_pyofa"]
size = Vector2(32, 48)

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_ni3vx"]
random_pitch = 1.5
random_volume_offset_db = 1.5
streams_count = 1
stream_0/stream = ExtResource("9_qqe4e")
stream_0/weight = 1.0

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_t655d"]
random_pitch = 1.5
random_volume_offset_db = 1.5
streams_count = 1
stream_0/stream = ExtResource("10_xdijb")
stream_0/weight = 1.0

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_4s456"]
random_pitch = 1.5
random_volume_offset_db = 1.5
streams_count = 1
stream_0/stream = ExtResource("11_2n4xc")
stream_0/weight = 1.0

[node name="Guardian" type="CharacterBody2D"]
collision_layer = 4
collision_mask = 7
script = ExtResource("1_yw4mg")
health = SubResource("Resource_n28sc")
stats = SubResource("Resource_5yajh")
aggro_shape = SubResource("CircleShape2D_t31eb")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(0.12, 0.12)
sprite_frames = SubResource("SpriteFrames_71ns4")
animation = &"idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 7)
shape = SubResource("CapsuleShape2D_e68us")

[node name="HitBoxArea2D" type="Area2D" parent="."]
position = Vector2(0, 8)
collision_layer = 4
collision_mask = 2
monitorable = false

[node name="HitBoxShape2D" type="CollisionShape2D" parent="HitBoxArea2D"]
position = Vector2(-41, -5)
shape = SubResource("RectangleShape2D_pyofa")
debug_color = Color(0.131466, 0.621939, 0.505432, 0.42)

[node name="HealthBar" parent="." instance=ExtResource("4_5trjv")]
position = Vector2(0, -40)
debug_health_bar = true

[node name="WalkingAudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = SubResource("AudioStreamRandomizer_ni3vx")
volume_db = -7.921
pitch_scale = 0.82
attenuation = 2.46229

[node name="AttackingAudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = SubResource("AudioStreamRandomizer_t655d")
volume_db = -10.099
pitch_scale = 0.9

[node name="HurtingAudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = SubResource("AudioStreamRandomizer_4s456")
volume_db = -5.0
pitch_scale = 0.8

[node name="AggroDetectionArea2D" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 2
monitorable = false

[node name="AggroCollisionShape2D" type="CollisionShape2D" parent="AggroDetectionArea2D"]
shape = SubResource("CircleShape2D_t31eb")
debug_color = Color(0.0763676, 0.401153, 0.231133, 0.42)

[connection signal="body_entered" from="HitBoxArea2D" to="." method="_on_hit_box_area_2d_body_entered"]
[connection signal="body_entered" from="AggroDetectionArea2D" to="." method="_on_aggro_detection_area_2d_body_entered"]
[connection signal="body_exited" from="AggroDetectionArea2D" to="." method="_on_aggro_detection_area_2d_body_exited"]
